# nopy

./: .flake8  .gitignore  404.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: python-package.yml
api_reference/client/: index.html
api_reference/enums/: index.html
api_reference/errors/: index.html
api_reference/filters/: index.html
api_reference/properties/: index.html
api_reference/query/: index.html
api_reference/sorts/: index.html
docs/: client.md  common_properties.md  exceptions.md  index.md
docs/api_reference/: client.md  enums.md  exceptions.md  typings.md
docs/properties/: database_properties.md
docs/usage/: databases.md  db_and_page_props.md  working_with_properties.md
features/: index.html
nopy/: block_mapper.py  client.py  constants.py  enums.py  exceptions.py  helpers.py  mapper.py  mappers.py  reverse_maps.py  typings.py  utils.py
nopy/objects/: block_types.py  blocks.py  db.py  notion_object.py  page.py  properties.py
nopy/properties/: base.py  common_properties.py  db_properties.py  page_properties.py  prop_enums.py
nopy/query/: __init__.py  filters.py  query.py  sorts.py
notion/: __init__.py  client.py  codegen.py  constants.py  exceptions.py  helpers.py  mapper.py  typings.py
notion/mappers/: db_mapper.py  helpers.py  mapper.py
notion/objects/: db.py  notion_object.py  page.py  properties.py
search/: search_index.json
tests/: conftest.py  test_block_mapping.py  test_client.py  test_db.py  test_db_mapping.py  test_db_properties.py  test_mapper.py  test_properties.py
(+57 files in other folders)
