[tool.poetry]
name = "notion"
version = "0.1.0"
description = ""
authors = ["Visakh Unnikrishnan <visakhcu96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocstrings-python = "^0.8.2"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.11"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
